using System.Collections;
using System.Collections.Generic;
using UnityEngine;

internal class AnimationStrings
{
    internal static string isMoving = "isMoving";
    internal static string isGrounded = "isGrounded";
    internal static string isOnWall = "isOnWall";
    internal static string isOnCeil = "isOnCeil";
    internal static string yVelocity = "yVelocity";
    internal static string canMove = "canMove";
    internal static string dashing = "dashing";
    internal static string stopDash = "stopDash";
    internal static string foundTarget = "foundTarget";
    internal static string hasTarget = "hasTarget";
    internal static string isAlive = "isAlive";
    internal static string isHit = "isHit";
    internal static string isSpawning = "isSpawning";
    internal static string jumpTrigger = "jump";
    internal static string dashTrigger = "dash";
    internal static string activated = "activated"; //trap activation
    internal static string hasLOS = "hasLOS";
}